syntax = "proto2";

package brfs.proto;
option java_package = "com.bonree.brfs.common.proto";
option java_outer_classname = "StorageNameProtos";

option java_generic_services = false;

message StorageNameRequest{
	optional string sessionId = 1;	//会话ID
	optional string name = 2;	//storageName，设定后，不可修改
	optional int32 ttl = 3;	//数据过期时间，可修改，修改需校验
	optional string description = 4;	//描述信息，可修改
	optional int32 replicas = 5;	//副本数，不可修改
	optional bool recoverFlag = 6;	//是否开启副本自动恢复，不可修改
	optional string user = 7; //用户名用来进行权限校验
	enum StorageNameOptType {  //操作类型
    	CREATE = 0;
    	UPDATE = 1;
    	DELETE = 2;
  	}
	optional StorageNameOptType storageNameOptType = 8;	//操作类型
}

message StorageNameResponse{
  	optional string sessionId = 1;	//会话ID
  	optional int32 returnCode = 2;	//返回码
  	optional string description = 3; //详细描述信息
}
